--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
   "author": "Swebert Correa",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^14.0.14",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.9.20",
     "nodemon": "^2.0.4",
     "socket.io": "^2.3.0"
   }
