--- a/server/package.json
+++ b/server/package.json
@@ -26,5 +26,8 @@
     "mongoose": "^5.9.20",
     "nodemon": "^2.0.4",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.7.29"
   }
 }
